# openapi-generator-spring/src/main/java/com/huongdanjava/openapispring/web/StudentsApiDelegate.java
@@ -1,89 +1,0 @@
-package com.huongdanjava.openapispring.web;
-
-import com.huongdanjava.openapispring.dto.Response;
-import com.huongdanjava.openapispring.dto.Student;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.MediaType;
-import org.springframework.http.ResponseEntity;
-import org.springframework.web.context.request.NativeWebRequest;
-import org.springframework.web.multipart.MultipartFile;
-
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import jakarta.annotation.Generated;
-
-/**
- * A delegate to be called by the {@link StudentsApiController}}.
- * Implement this interface with a {@link org.springframework.stereotype.Service} annotated class.
- */
-@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2023-06-27T14:24:29.472247-04:00[America/New_York]")
-public interface StudentsApiDelegate {
-
-    default Optional<NativeWebRequest> getRequest() {
-        return Optional.empty();
-    }
-
-    /**
-     * DELETE /students/{id} : Delete a student by id
-     *
-     * @param id Id of the Student (required)
-     * @return Delete student information successfully (status code 200)
-     * @see StudentsApi#deleteStudentById
-     */
-    default ResponseEntity<Response> deleteStudentById(String id) {
-        getRequest().ifPresent(request -> {
-            for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
-                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
-                    String exampleString = "{ \"message\" : \"message\" }";
-                    ApiUtil.setExampleResponse(request, "application/json", exampleString);
-                    break;
-                }
-            }
-        });
-        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
-
-    }
-
-    /**
-     * GET /students/{id} : Get a student by id
-     *
-     * @param id Id of the Student (required)
-     * @return Get student information successfully (status code 200)
-     * @see StudentsApi#getStudentById
-     */
-    default ResponseEntity<Student> getStudentById(String id) {
-        getRequest().ifPresent(request -> {
-            for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
-                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
-                    String exampleString = "{ \"code\" : \"code\", \"name\" : \"name\", \"id\" : 0 }";
-                    ApiUtil.setExampleResponse(request, "application/json", exampleString);
-                    break;
-                }
-            }
-        });
-        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
-
-    }
-
-    /**
-     * GET /students : Get all students
-     *
-     * @return Get all students successfully (status code 200)
-     * @see StudentsApi#getStudents
-     */
-    default ResponseEntity<List<Student>> getStudents() {
-        getRequest().ifPresent(request -> {
-            for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
-                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
-                    String exampleString = "[ { \"code\" : \"code\", \"name\" : \"name\", \"id\" : 0 }, { \"code\" : \"code\", \"name\" : \"name\", \"id\" : 0 } ]";
-                    ApiUtil.setExampleResponse(request, "application/json", exampleString);
-                    break;
-                }
-            }
-        });
-        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
-
-    }
-
-}
